prevented navbar covering title at small screen sizes

--- a/assets/styles/style.css
+++ b/assets/styles/style.css
@@ -4,12 +4,15 @@
     background-color: #cbf7ed;;
     color:#161925
 }
+
+.card{
+    background-color: #cbf7ed;
+}
+
 .navbar{
     background-color:#406e8a;
     color:#161925;
     position:fixed;
-    top:0;
-    right:0;
     order: -1;
 }
 
